# aws-c-event-stream

./: .travis.yml  CMakeLists.txt  README.md  build-deps.sh  builder.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  clang-format.yml  clang-tsan.yml  mac-osx-ci.yml  stale_issue.yml
.travis/: travis_build.sh
cmake/: aws-c-event-stream-config.cmake
codebuild/: common-linux.sh  common-macos.sh  common-windows.bat  linux-gcc-4x-x86.yml
include/aws/event-stream/: event_stream.h  event_stream_channel_handler.h  event_stream_exports.h  event_stream_rpc.h  event_stream_rpc_client.h  event_stream_rpc_server.h
include/aws/event-stream/private/: event_stream_rpc_priv.h  event_stream_rpc_test_helper.h
source/: event_stream.c  event_stream_channel_handler.c  event_stream_rpc.c  event_stream_rpc_client.c  event_stream_rpc_refactor.c  event_stream_rpc_server.c
tests/: CMakeLists.txt  channel_handler_test.c  event_stream_rpc_client_connection_test.c  event_stream_rpc_server_connection_test.c  message_deserializer_test.c  message_serializer_test.c  message_streaming_decoder_test.c  run_tests.c
